--- a/firomon-scraper/Dockerfile
+++ b/firomon-scraper/Dockerfile
@@ -1,11 +1,13 @@
-FROM python:latest
+FROM python:3.11
 
 WORKDIR /scraper
 
 COPY firomon-scraper/Requirements.txt ./
-RUN pip install --no-cache-dir -r Requirements.txt
+#RUN pip install --no-cache-dir -r Requirements.txt
+RUN python3 -m venv /venv
+RUN /venv/bin/pip install --no-cache-dir -r Requirements.txt
 
 COPY firomon-scraper/ /scraper
 COPY shared/ /shared
 
-CMD [ "python", "main.py" ]
+CMD [ "/venv/bin/python", "main.py" ]
